- wxID_SEPARATOR (id used for the menu separators) value changed from -1 to -2
- wxGetNumberFromUser() is now in separate wx/numdlg.h, not wx/textdlg.h
- wxChoice and wxCombobox now handle their size in the same way as in all the
  other ports under MSW, new code is actually correct but different from weird
  stuff they were doing before so the behaviour of your programs might change


DEPRECATED METHODS SINCE 2.4.x
==============================

Deprecated methods may still be used but will disappear in future wxWindows
versions, please update your code to not use them.

- wxDocManager::GetNoHistoryFiles() renamed to GetHistoryFilesCount()
- wxSizer::Remove(wxWindow *), use Detach() instead [it is more clear]
- wxSizer::Set/GetOption(): use Set/GetProportion() instead
- wxKeyEvent::KeyCode(): use GetKeyCode instead
- wxList::Number, First, Last, Nth: use GetCount, GetFirst/Last, Item instead
- wxNode::Next, Previous, Data: use GetNext, GetPrevious, GetData instead
- wxListBase::operator wxList&(): use typesafe lists instead
- wxTheFontMapper: use wxFontMapper::Get() instead
- wxStringHashTable: use wxHashMap instead
- wxHashTableLong: use wxHashMap instead
- wxArrayString::GetStringArray: use wxCArrayString or alternative wxWindows
                                 methods taking wxArrayString
- wxArrayString::Remove(index, count): use RemoveAt instead
- wxTreeItemId conversion to long is deprecated and shouldn't be used
- [MSW only] wxWindow::GetUseCtl3D(), GetTransparentBackground() and
             SetTransparent() as well as wxNO_3D and wxUSER_COLOURS styles
- wxList keyed interface: use wxHashMap instead
- wxColourDatabase::FindColour(): use Find() instead (NB: different ret type)
- wxHashTable::Next: use wxHashTable::Node* or
                     wxHashTable::compatibility_iterator to store the return
                     value
- wxWave class; use wxSound instead


OTHER CHANGES
=============

2.5.2
-----

All:

All (GUI):
